--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
+  text-align: left;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Nav-bar {
+  padding: 10px;
+  display: flex;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  height: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.Content {
+  flex: 1;
+  background-color: lightgray;
+  padding: 20px 20px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Asset-container {
+  display: flex;
+  align-items: start;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Load-more {
+  margin-top: 10px;
+  float: right;
 }
