--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,20 +5,6 @@
   flex-direction: column;
 }
 
-.Nav-bar {
-  height: 5rem;
-  position: relative;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-}
-
-.App-logo {
-  position: absolute;
-  height: 5rem;
-  left: 0;
-}
-
 .Content {
   flex: 1;
   background-color: whitesmoke;
@@ -36,4 +22,8 @@
   float: right;
   margin-right: 1rem;
   height: 1.25rem;
+}
+
+.Asset-title {
+  margin-left: 1rem;
 }
