--- a/client/src/Components/Button/Button.css
+++ b/client/src/Components/Button/Button.css
@@ -1,3 +1,7 @@
 .Button {
-
+    cursor: pointer;
+    border-radius: 3px;
+    border: 1px solid #4267B2;
+    color: #4267B2;
+    background: none;
 }
