--- a/client/src/Components/MetricWidget/MetricWidget.css
+++ b/client/src/Components/MetricWidget/MetricWidget.css
@@ -1,10 +1,11 @@
 .Metric-widget {
-    width: 250px;
+    width: 15rem;
+    min-width: 15rem;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin: 0 1rem;
 }
 
 .Metric-detail {
-    margin: 0.5rem;
+    margin: 0.5rem 0.5rem 0 0.5rem;
 }
