--- a/client/src/Components/ServiceWidget/ServiceWidget.css
+++ b/client/src/Components/ServiceWidget/ServiceWidget.css
@@ -1,4 +1,4 @@
-.Icon {
+.Service-icon {
     height: 3.5rem;
     width: 3.5rem;
 }
@@ -18,12 +18,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     margin: 0 1rem;
 }
 
 .Service-name {
-    margin-top: 0;
+    margin: 0 0 1rem 0;
     width: 6rem;
     overflow: hidden;
     white-space: nowrap;
