--- a/client/src/NavBar/Search/Search.css
+++ b/client/src/NavBar/Search/Search.css
@@ -1,8 +1,9 @@
 input[type="text"] {
     flex: 1;
-    padding: 0.5rem;
+    padding: 0.75rem;
     border-radius: 3px;
     border: 1px solid lightgray;
+    font-size: 1rem;
 }
 
 input[type="submit"] {
@@ -12,6 +13,7 @@ input[type="submit"] {
     border-radius: 3px;
     border: 1px solid #4267B2;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 input[type="submit"]:hover {
