--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 .Content {
   flex: 1;
   background-color: whitesmoke;
-
+  justify-content: space-evenly;
   display: flex;
   flex-direction: column;
 }
@@ -26,4 +26,5 @@
 
 .Asset-title {
   margin-left: 1rem;
+  margin-top: 0;
 }
