--- a/client/src/Components/DataModelWidget/DataModelWidget.css
+++ b/client/src/Components/DataModelWidget/DataModelWidget.css
@@ -2,12 +2,11 @@
     width: 16rem;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin: 0 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
 }
 
 .Data-model-icon {
