--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,29 @@
 .App {
-  text-align: left;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+    text-align: left;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
 }
 
 .Content {
-  flex: 1;
-  background-color: whitesmoke;
-  justify-content: space-evenly;
-  display: flex;
-  flex-direction: column;
-}
-
-.Asset-container {
-  display: flex;
-  margin-bottom: 0.5rem;
-  justify-content: space-evenly;
+    flex: 1;
+    background-color: whitesmoke;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .Load-more {
-  float: right;
-  margin-right: 1rem;
-  height: 1.25rem;
+    float: right;
+    height: 1.25rem;
+}
+
+.Load-more > *:first-child {
+    margin-right: 1rem;
 }
 
 .Asset-title {
-  margin-left: 1rem;
-  margin-top: 0;
+    margin-top: 0;
 }
+
