--- a/client/src/Metrics/Metrics.css
+++ b/client/src/Metrics/Metrics.css
@@ -1,1 +1,7 @@
-
+.Metric-grid {
+    display: grid; /* 1 */
+    grid-template-columns: repeat(auto-fill, 16rem); /* 2 */
+    grid-gap: 1rem; /* 3 */
+    justify-content: space-between; /* 4 */
+    margin-bottom: 1rem;
+}
